blocks/header/header.css
/* header and nav layout */
header .nav-wrapper {
  background-color: #fff;
  color: var(--text-color);
  width: 100%;
  z-index: 2;
  position: fixed;
  top: var(--global-nav-height);
  box-shadow: 0 2px 8px rgba(0 0 0 / 10%);
}

header nav {
  box-sizing: border-box;
  display: grid;
  grid-template:
    'hamburger brand tools' var(--nav-height)
    'sections sections sections' 1fr / auto 1fr auto;
  align-items: center;
  gap: 0 24px;
  margin: auto;
  max-width: 1248px;
  height: var(--nav-height);
  padding: 0 24px;
  font-family: var(--body-font-family);
}

header nav[aria-expanded='true'] {
  grid-template:
    'hamburger brand' var(--nav-height)
    'sections sections' 1fr
    'tools tools' var(--nav-height) / auto 1fr;
  overflow-y: auto;
  min-height: 100dvh;
}

@media (width >= 900px) {
  header nav {
    display: flex;
    justify-content: space-between;
    gap: 0 32px;
    max-width: 1264px;
    padding: 0 32px;
  }

  header nav[aria-expanded='true'] {
    min-height: 0;
    overflow: visible;
  }
}

header nav p {
  margin: 0;
  
  /* line-height: 1; BOILERPLATE DOESN'T HAVE a P tag in header, */
}

header nav a:any-link {
  color: currentcolor;
}

/* global nav bar (Register / Login) */
header .global-nav-wrapper {
  background-color: var(--brand-red);
  color: #fff;
  width: 100%;
  z-index: 3;
  position: fixed;
  top: 0;
  height: var(--global-nav-height);
  display: flex;
  align-items: center;
  justify-content: flex-end;
  font-size: var(--body-font-size-xs);
}

header .global-nav-wrapper p {
  margin: 0;
  padding: 0 24px;
}

header .global-nav-wrapper ul {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 8px;
  margin: 0;
  padding: 0 32px;
}

header .global-nav-wrapper ul li {
  display: flex;
  align-items: center;
  gap: 8px;
}

header .global-nav-wrapper ul li:not(:last-child)::after {
  content: '|';
  color: rgba(255 255 255 / 60%);
}

header .global-nav-wrapper a:any-link {
  color: #fff;
  font-weight: 500;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  font-size: inherit;
}

header .global-nav-wrapper a:hover {
  color: rgba(255 255 255 / 80%);
  text-decoration: underline;
  background: none;
}

/* hamburger */
header nav .nav-hamburger {
  grid-area: hamburger;
  height: 22px;
  display: flex;
  align-items: center;
}

header nav .nav-hamburger button {
  height: 22px;
  margin: 0;
  border: 0;
  border-radius: 0;
  padding: 0;
  background-color: transparent;
  color: inherit;
  overflow: initial;
  text-overflow: initial;
  white-space: initial;
}

header nav .nav-hamburger-icon,
header nav .nav-hamburger-icon::before,
header nav .nav-hamburger-icon::after {
  box-sizing: border-box;
  display: block;
  position: relative;
  width: 20px;
}

header nav .nav-hamburger-icon::before,
header nav .nav-hamburger-icon::after {
  content: '';
  position: absolute;
  background: currentcolor;
}

header nav[aria-expanded='false'] .nav-hamburger-icon,
header nav[aria-expanded='false'] .nav-hamburger-icon::before,
header nav[aria-expanded='false'] .nav-hamburger-icon::after {
  height: 2px;
  border-radius: 2px;
  background: currentcolor;
}

header nav[aria-expanded='false'] .nav-hamburger-icon::before {
  top: -6px;
}

header nav[aria-expanded='false'] .nav-hamburger-icon::after {
  top: 6px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon {
  height: 22px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon::before,
header nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: 3px;
  left: 1px;
  transform: rotate(45deg);
  transform-origin: 2px 1px;
  width: 24px;
  height: 2px;
  border-radius: 2px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: unset;
  bottom: 3px;
  transform: rotate(-45deg);
}

@media (width >= 900px) {
  header nav .nav-hamburger {
    display: none;
    visibility: hidden;
  }
}

/* brand */
header .nav-brand {
  grid-area: brand;
  flex-basis: 128px;
  font-size: var(--heading-font-size-s);
  font-weight: 700;
  line-height: 1;
}

header nav .nav-brand img {
  width: 128px;
  height: auto;
}

/* sections */
header nav .nav-sections {
  grid-area: sections;
  flex: 1 1 auto;
  display: none;
  visibility: hidden;
}

header nav[aria-expanded='true'] .nav-sections {
  display: block;
  visibility: visible;
  align-self: start;
}

header nav .nav-sections ul {
  list-style: none;
  padding-left: 0;
  font-size: var(--body-font-size-s);
}

header nav .nav-sections ul > li {
  font-weight: 500;
}

header nav .nav-sections a:any-link {
  color: var(--heading-color);
}

header nav .nav-sections ul > li > ul {
  margin-top: 0;
}

header nav .nav-sections ul > li > ul > li {
  font-weight: 400;
}

@media (width >= 900px) {
  header nav .nav-sections {
    display: flex;
    align-items: center;
    visibility: visible;
    white-space: nowrap;
    gap: 16px;
  }

  header nav .nav-sections > .default-content-wrapper {
    flex-shrink: 0;
  }

  header nav[aria-expanded='true'] .nav-sections {
    align-self: unset;
  }

  header nav .nav-sections .nav-drop {
    position: relative;
    padding-right: 16px;
    cursor: pointer;
  }

  header nav .nav-sections .nav-drop::after {
    content: '';
    display: inline-block;
    position: absolute;
    top: 0.5em;
    right: 2px;
    transform: rotate(135deg);
    width: 6px;
    height: 6px;
    border: 2px solid currentcolor;
    border-radius: 0 1px 0 0;
    border-width: 2px 2px 0 0;
  }

  header nav .nav-sections .nav-drop[aria-expanded='true']::after {
    top: unset;
    bottom: 0.5em;
    transform: rotate(315deg);
  }

  header nav .nav-sections ul {
    display: flex;
    align-items: center;
    gap: 24px;
    margin: 0;
  }

  header nav .nav-sections .default-content-wrapper > ul > li {
    flex: 0 1 auto;
    position: relative;
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul {
    display: none;
    position: relative;
  }

  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
    display: block;
    position: absolute;
    left: -24px;
    width: 200px;
    top: 150%;
    padding: 16px;
    background-color: #fff;
    white-space: initial;
    z-index: 1;
    border-top: 2px solid var(--brand-red);
    box-shadow: 0 4px 12px rgba(0 0 0 / 10%);
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
    content: '';
    position: absolute;
    top: -8px;
    left: 16px;
    width: 0;
    height: 0;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-bottom: 8px solid var(--brand-red);
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
    padding: 8px 0;
  }
}

/* tools (bell icon, track cargo) */
header nav .nav-tools {
  grid-area: tools;
}

/* stylelint-disable-next-line no-descending-specificity */
header nav .nav-tools ul {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 16px;
  margin: 0;
  padding: 0;
}

header nav .nav-tools .icon {
  display: flex;
  align-items: center;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

header nav .nav-tools ul > li > a:any-link {
  color: #fff;
  background-color: var(--brand-red);
  border-radius: 4px;
  padding: 8px 16px;
  font-size: var(--body-font-size-xs);
  font-weight: 500;
  white-space: nowrap;
  text-decoration: none;
  display: inline-block;
  margin: 0;
  border: none;
}

header nav .nav-tools ul > li > a:hover {
  background-color: var(--brand-red-dark);
  color: #fff;
  text-decoration: none;
}

/* breadcrumbs */
header .breadcrumbs {
  display: none;
  margin: auto;
  max-width: 1248px;
  height: var(--breadcrumbs-height);
  padding: 0 24px;
  font-size: var(--body-font-size-xs);
  overflow: hidden;
}

header .breadcrumbs ol {
  display: flex;
  flex-flow: wrap;
  list-style: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  gap: 1ch;
}

/* stylelint-disable-next-line no-descending-specificity */
header .breadcrumbs ol li {
  padding: 0;
  color: var(--dark-color);
}

header .breadcrumbs ol li:not(:last-child)::after {
  content: '/';
  padding-left: 1ch;
}

/* stylelint-disable-next-line no-descending-specificity */
header .breadcrumbs ol li[aria-current] {
  color: var(--text-color);
}

@media (width >= 900px) {
  header .breadcrumbs {
    display: block;
    max-width: 1264px;
    padding: 0 32px;
  }
}

